# han2kip

./: LICENSE  README.md  kip_converter.py  pyproject.toml
data/: dict.txt
han2kip/: kip_converter.py
han2kip/data/: words.json
